--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -16,4 +17,8 @@ body {
   color: #2e363e;
   font-family: "Open Sans", sans-serif;
   height: 1000vh;
+}
+
+.main-screen {
+  padding: 0px var(--horizontal-space);
 }
