--- a/css/components/nav-bar.css
+++ b/css/components/nav-bar.css
@@ -20,15 +20,6 @@
 }
 
 .nav__notification {
-  background-color: tomato;
-  width: 30px;
-  height: 30px;
-  border-radius: 15px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: white;
-  font-weight: 600;
   position: absolute;
   left: 15px;
   bottom: 15px;
@@ -39,10 +30,7 @@
   width: 5px;
   height: 5px;
   border-radius: 2.5px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   position: absolute;
-  left: 30px;
-  bottom: 30px;
+  top: -7px;
+  right: -6px;
 }
