--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -14,6 +14,10 @@
   font-weight: 600;
 }
 
+.screen-header__icons {
+  position: relative;
+}
+
 .screen-header__icons span {
   margin-left: 20px;
 }
