--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -21,3 +21,17 @@
 .screen-header__icons span {
   margin-left: 20px;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+
+.screen-header__icons .fa-cog:hover {
+  animation: rotateCog 1s linear infinite;
+  cursor: pointer;
+}
